--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -1,4 +1,23 @@
-<p>level works!</p>
-
-<button (click)="animate()">Scroll</button>
-<canvas #canvas width="1024" height="720"></canvas>
+<div class="center">
+  <div>
+    <div class="top">
+      <h1>ngMario</h1>
+      <div class="bottom">
+        <div>
+        <label>
+            Blabla
+        <select>
+          <option>a</option>
+        </select>
+    </label>
+        <select>
+          <option>a</option>
+        </select>
+        <button>Scroll</button>
+        <a>Hallo</a>
+    </div>
+      </div>
+    </div>
+    <canvas #canvas width="1024" height="720"></canvas>
+  </div>
+</div>
