--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,36 @@
 /* You can add global styles to this file, and also import other style files */
 canvas {
-    border: 2px solid black;
+  border: 2px solid black;
 }
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+
+button, label, select {
+    display: inline-block;
+    margin: 0 5px;
+
+}
+
+button {
+    padding: 3px 10px;
+}
+
+.bottom {
+    display: flex;
+    flex-direction: column;
+    justify-content:  center /* Inhalte unten ausrichten */
+  }
+  
+  h1 {
+    margin: 0px;
+  }
