--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -4,16 +4,18 @@
       <h1>ngMario</h1>
       <div class="bottom">
         <div>
-        <label>
-            Blabla
-        <select>
-          <option>a</option>
+      
+        <select [(ngModel)]="levelKey">
+          <option value="01">Level 01</option>
+          <option value="02">Level 02</option>
         </select>
-    </label>
-        <select>
-          <option>a</option>
+        <select [(ngModel)]="style">
+          <option value="overworld">Overworld</option>
+          <option value="underworld">Underworld</option>
+          <option value="underwater">Underwater</option>
+          <option value="snow">Snow</option>
         </select>
-        <button>Scroll</button>
+        <button (click)="animate()">Scroll</button>
         <a>Hallo</a>
     </div>
       </div>
