--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(mvp.css);
+
 canvas {
   border: 2px solid black;
 }
@@ -34,4 +35,10 @@ button {
 
 h1 {
   margin: 0px;
+}
+
+.progress {
+  /* width: 100px; */
+  display: inline-block;
+  margin-right: 5px;
 }
