--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -15,7 +15,7 @@
           </select>
           <select [(ngModel)]="style">
             <option value="overworld">Overworld</option>
-            <option value="underworld">Underworld</option>
+            <option value="underground">Underground</option>
             <option value="underwater">Underwater</option>
             <option value="castle">Castle</option>
           </select>
