feat: add small info about which keys to press for playing

--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -26,5 +26,8 @@
       </div>
     </div>
     <canvas #canvas width="1024" height="720"></canvas>
+    <div class="controls-info">
+      Controls: left, right, a (jump)
+    </div>
   </div>
 </div>
