feat: remove focus from dropdown after selection

--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -27,7 +27,7 @@
     </div>
     <canvas #canvas width="1024" height="720"></canvas>
     <div class="controls-info">
-      Controls: left, right, a (jump)
+      Controls: left, right, up
     </div>
   </div>
 </div>
