chore: refactor animate to play

--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -20,7 +20,7 @@
             <option value="underwater">Underwater</option>
             <option value="castle">Castle</option>
           </select>
-          <button (click)="toggleAnimation()">Toggle Animation</button>
+          <button (click)="togglePlay()">Play Game</button>
           <button (click)="reload()">Reload</button>
         </div>
       </div>
