fix: remove progress information for demo

--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -4,7 +4,7 @@
       <h1>ngMario</h1>
       <div class="bottom">
         <div>
-          <div class="progress">{{ tilesMapProgress() }}</div>
+          <!-- <div class="progress">{{ tilesMapProgress() }}</div> -->
           <select [(ngModel)]="levelKey">
             @for (
               level of levelOverviewResource.value().levels;
